Fix scroll issue on iOS Device

--- a/src/components/common/Scaffold/Scaffold.scss
+++ b/src/components/common/Scaffold/Scaffold.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   overflow: hidden;
   background: var(--background);
-  min-height: -webkit-fill-available;
+  min-height: -webkit-fit-content;
   padding: 0px 100px;
   justify-content: center;
 }
